<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="#F5F5F5"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="12dp">

            <!-- Image of the item -->
            <ImageView
                android:id="@+id/itemImage"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:contentDescription="@string/item_image"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_launcher_background" />

            <!-- Waste type text -->
            <TextView
                android:id="@+id/textView_itemType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text=""
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textStyle="bold" />

            <!-- Delete Icon as a GIF -->
            <ImageView
                android:id="@+id/deleteIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/delete_icon"
                android:layout_gravity="center"
                android:scaleType="centerInside" />

            <!-- Info Animation Icon as a GIF -->
            <ImageView
                android:id="@+id/infoIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/info_icon"
                android:layout_gravity="center"
                android:scaleType="centerInside" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
